Background fix, card aligned, card title size changed

--- a/Webseite/styles.css
+++ b/Webseite/styles.css
@@ -7,6 +7,7 @@ Blau:  #0066CC
 
 body{
     background-color: #1D1D1F;
+    height: 100vh;
 }
 
 .card-text{
@@ -16,11 +17,21 @@ body{
 
 .card-body{
     background-color: #FBFBFD;
+    padding-bottom: 40px;
+
 }
 
 /* align center card */
 .card {
-    margin: 0 auto;
+    margin: 0;
     float: none;
     margin-bottom: 10px;
+
+}
+
+.card-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
